# model_browser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml
frontend/: app.js  index.html  style.css
src/: main.rs  mesh.rs  paths.rs  threemf.rs  tree.rs
