[package]
name = "model-browser"
version = "0.1.0"
edition = "2024"
description = "Single-binary browser-based 3D model viewer for .3mf and .stl files"

[[bin]]
name = "model-browser"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-gzip", "set-header", "cors"] }
tower = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
rustc-hash = "2"
bytemuck = "1"
clap = { version = "4", features = ["derive"] }
percent-encoding = "2"
open = "5"
lru = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1"
mime_guess = "2"

[build-dependencies]
winresource = "0.1"
